# rocky

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Cargo_simple.toml  Dockerfile  INFORME_TECNICO_EXPERTO_COMPLETO.html  INFORME_TECNICO_EXPERTO_COMPLETO.md  LICENSE  MANUAL_ESTUDIO.md  README.md  SECURITY_PERFORMANCE.md  SURREALDB.md  TESTING_COMPLETE.md  Trunk.toml  WHITEPAPER.md  ZEUS_V15_SUMMARY.md  apollo_check.txt  apollo_check_v2.txt  auth_direct.txt  build_err.txt  build_log.txt  check_errors.txt  check_errors_v10.txt  check_errors_v11.txt  check_errors_v12.txt  check_errors_v13.txt  check_errors_v14.txt  check_errors_v15.txt  check_errors_v16.txt  check_errors_v17.txt  check_errors_v2.txt  check_errors_v3.txt  check_errors_v4.txt  check_errors_v5.txt  check_errors_v6.txt  check_errors_v7.txt  check_errors_v8.txt  check_errors_v9.txt  check_output.txt  (+25 more)
.github/workflows/: ci.yml
assets/: index.html  style.css
client/: Cargo.toml  Trunk.toml  index.html
client/src/: lib.rs  main.rs
db/: schema.surql
docs/: ROADMAP_OPTIMIZADO_2026.md
olympus-client/: Cargo.toml  index.html
olympus-core/: Cargo.toml
olympus-core/src/: apache.rs  config.rs  glasgow.rs  history.rs  lib.rs  mod.rs  news2.rs  patient.rs  saps.rs  sofa.rs  user.rs
olympus-server/: Cargo.toml
olympus-server/src/: main.rs
olympus-server/src/actors/: olympus_system.rs
olympus-server/src/actors/aphrodite/: accessibility.rs  components.rs
olympus-server/src/actors/apollo/: events.rs  metrics.rs
olympus-server/src/actors/ares/: detector.rs  history.rs  mod.rs
olympus-server/src/actors/artemis/: schema.rs
olympus-server/src/actors/athena/: analysis.rs  mod.rs
olympus-server/src/actors/aurora/: dawn.rs  inspiration.rs  mod.rs  opportunities.rs
olympus-server/src/actors/chaos/: experiments.rs  failure_injection.rs  impact.rs  recovery.rs
olympus-server/src/actors/chronos/: mod.rs  scheduler.rs  statistics.rs
olympus-server/src/actors/dionysus/: mod.rs
olympus-server/src/actors/erinyes/: alerts.rs  dead_letter.rs  heartbeat.rs  recovery.rs
olympus-server/src/actors/hades/: auth.rs  encryption.rs  mod.rs
olympus-server/src/actors/hefesto/: config.rs  mod.rs
olympus-server/src/actors/hera/: mod.rs  schemas.rs  validators.rs
olympus-server/src/actors/hermes/: delivery.rs  mailbox.rs
olympus-server/src/actors/hestia/: memory_store.rs  sync.rs
olympus-server/src/actors/iris/: mod.rs
olympus-server/src/actors/moirai/: mod.rs  predictions.rs
olympus-server/src/actors/nemesis/: compliance.rs
olympus-server/src/actors/poseidon/: flow_control.rs  reconnection.rs
olympus-server/src/actors/zeus/: governance.rs  metrics.rs  supervisor.rs
olympus-server/src/errors/: actor_error.rs  mod.rs
olympus-server/src/infrastructure/: mod.rs
olympus-server/src/system/: genesis.rs  mod.rs  runner.rs
olympus-server/src/traits/: message.rs  persistable.rs  supervisor_trait.rs
olympus-server/src/uci/: scale.rs
olympus-server/src/uci/scale/: apache.rs  glasgow.rs  sofa.rs
server/: Cargo.toml
server/src/: genesis.rs  main.rs  olympus_services.rs
server/src/actors/: aphrodite.rs  athena.rs  erinyes.rs  hades.rs  hermes.rs  hestia.rs  minor_gods.rs  mod.rs  poseidon.rs  zeus.rs
src/: audit.rs  auth.rs  db.rs  eligibility_endpoint.tmp  error.rs  frontend.rs  lib.rs  main.rs  main_v11_backup.rs  mp_system.rs  olympus_services.rs  poseidon.rs  server.rs  simple_server.rs
src/actors/: aphrodite.rs  apollo.rs  ares.rs  artemis.rs  athena.rs  aurora.rs  chaos.rs  chronos.rs  demeter.rs  dionysius.rs  erinyes.rs  hades.rs  hefesto.rs  hera.rs  hermes.rs  hestia.rs  iris.rs  mod.rs  moirai.rs  poseidon.rs  zeus.rs
src/actors/aphrodite/: animations.rs  components.rs  mod.rs  theme.rs
src/actors/apollo/: events.rs  logging.rs  metrics.rs  mod.rs  queries.rs
src/actors/ares/: detector.rs  history.rs  mod.rs  strategies.rs
src/actors/artemis/: indexing.rs  mod.rs  search.rs
src/actors/athena/: insights.rs  mod.rs  predictions.rs  scales.rs
src/actors/aurora/: dawn.rs  hope.rs  inspiration.rs  mod.rs  opportunities.rs
src/actors/chaos/: experiments.rs  failure_injection.rs  impact.rs  injection.rs  learning.rs  mod.rs  monitoring.rs  recovery.rs
src/actors/chronos/: mod.rs  scheduler.rs  tasks.rs  time_events.rs
src/actors/demeter/: alerts.rs  mod.rs  resources.rs
src/actors/dionysus/: engine.rs  mod.rs
src/actors/erinyes/: alerts.rs  dead_letter.rs  heartbeat.rs  mod.rs  recovery.rs  watchdog.rs
src/actors/hades/: audit.rs  auth.rs  encryption.rs  keys.rs  mod.rs
src/actors/hefesto/: backup.rs  migration.rs  mod.rs  validation.rs
src/actors/hera/: mod.rs  rules.rs
src/actors/hermes/: broadcast.rs  delivery.rs  mailbox.rs  mod.rs  retry.rs  router.rs
src/actors/hestia/: async_buffer.rs  cache.rs  memory_store.rs  mod.rs  sync.rs
src/actors/iris/: mod.rs
src/actors/moirai/: fate.rs  mod.rs  (+3 more)
src/core/: mod.rs
src/errors/: actor_error.rs  mod.rs  olympus_error.rs  persistence_error.rs
src/frontend/: admin.rs  apache_form.rs  app.rs  dashboard.rs  glasgow_form.rs  i18n.rs  login.rs  news2_form.rs  patient_detail.rs  patient_form.rs  patient_list.rs  saps_form.rs  sofa_form.rs  ward_view.rs
src/hades/: crypto.rs
src/infrastructure/: mod.rs  surreal.rs  valkey.rs
src/models/: apache.rs  config.rs  glasgow.rs  history.rs  mod.rs  news2.rs  patient.rs  saps.rs  sofa.rs  user.rs
src/olympus/: aphrodite.rs  apollo.rs  ares.rs  artemis.rs  athena.rs  chaos.rs  chronos.rs  demeter.rs  dionysus.rs  erinyes.rs  hades.rs  hephaestus.rs  hera.rs  hermes.rs  hestia.rs  iris.rs  mod.rs  moirai.rs  poseidon.rs  zeus.rs
src/server_functions/: admin.rs  auth.rs  db.rs  mod.rs  patients.rs  scales.rs
src/services/: clinical.rs  export.rs  mod.rs  validation.rs
src/system/: genesis.rs  mod.rs  runner.rs
src/traits/: actor_trait.rs  message.rs  mod.rs  supervisor_trait.rs
src/uci/: scale.rs
tests/: security_tests.rs
tests/e2e/: clinical_workflows.rs
tests/integration/: actor_interaction.rs  failover_tests.rs  mod.rs
tests/unit/: mod.rs
(+53 files in other folders)
