[package]
name = "uci"
version = "0.1.0"
license = "GPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "frontend"
path = "src/bin/frontend.rs"
required-features = ["csr"]

[[bin]]
name = "uci-server"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.126"
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-timers = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Storage", "Window", "Document", "Element", "HtmlElement", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement"] }
reqwasm = { version = "0.5.0", optional = true }

# Backend dependencies (optional, enabled by ssr feature)
axum = { version = "0.8.7", features = ["ws"], optional = true }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal"], optional = true }
tower-http = { version = "0.6.7", features = ["full", "cors"], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"], optional = true }
leptos_axum = { version = "0.6", optional = true }
surrealdb = { version = "2.4", features = ["kv-rocksdb"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
dotenvy = { version = "0.15", optional = true }
ammonia = "4.1.2"
csv = "1.4.0"
toml = "0.8"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto", "pem"], default-features = false }
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
argon2 = "0.5"
blake3 = "1.5"
base64 = "0.22"
futures-util = { version = "0.3", features = ["sink"] }
# tower_governor = { version = "0.4.3", optional = true } # Incompatible with Axum 0.8
async-trait = "0.1"


[features]
default = ["ssr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "dep:reqwasm", "dep:chrono"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:reqwasm"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:leptos_axum",
    "dep:surrealdb",
    "surrealdb/protocol-ws", 
    "surrealdb/protocol-http",
    "dep:chrono",
    "dep:dotenvy",
    # "dep:tower_governor",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

