[package]
name = "olympus"
version = "12.0.0"
license = "MIT"
edition = "2021"
description = "Clinical Intelligence System v12"
authors = ["Olympus Medical Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "frontend"
path = "src/bin/frontend.rs"
required-features = ["csr"]

[[bin]]
name = "olympus-server"
path = "src/main.rs"
required-features = ["ssr"]

[dependencies]
# Core serialization and data
serde = { version = "1.0.228", features = ["derive", "rc", "alloc", "std"] }
serde_json = "1.0.126"
toml = "0.8"
uuid = { version = "1.10", features = ["v4", "serde", "fast-rng"] }
base64 = "0.22"

# Frontend (WebAssembly)
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-timers = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Storage", "Window", "Document", "Element", "HtmlElement", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement"] }
reqwasm = { version = "0.5.0", optional = true }

# Backend dependencies (optional, enabled by ssr feature)
axum = { version = "0.8.7", features = ["ws"], optional = true }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync", "fs", "process", "io-util", "parking_lot", "tracing"], optional = true }
tower-http = { version = "0.6.7", features = ["full", "cors"], optional = true }
tower = { version = "0.5", features = ["full"], optional = true }
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_debug", "async-await", "log", "log-always"], optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json", "registry", "smallvec", "time", "tracing-log"], optional = true }
leptos_axum = { version = "0.6", optional = true }
surrealdb = { version = "2.4", features = ["protocol-ws", "protocol-http", "kv-mem"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
dotenvy = { version = "0.15", optional = true }
config = { version = "0.14", features = ["yaml", "json"], optional = true }

# Data processing and validation
ammonia = "4.1.2"
csv = "1.4.0"
futures-util = { version = "0.3", features = ["sink"] }
async-trait = "0.1"
regex = "1.10"

# OTP Core: Actor System and GenServer
ractor = { version = "0.9", features = ["async-trait"] }
kompact = "0.11"
dashmap = "6.0"
lru = "0.12"
parking_lot = "0.12"

# Supervisor and Error Handling
eyre = "0.6"
anyhow = "1.0"
color-eyre = "0.6"
thiserror = "1.0"

# Cryptography and Security
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto", "pem"], default-features = false }
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
argon2 = "0.5"
blake3 = "1.5"
ring = "0.17"
rustls = "0.23"
x509-parser = "0.16"
pem = "3.0"
pkcs8 = "0.10"
ecdsa = "0.16"
ed25519-dalek = "2.0"

# Distributed Systems (remove unavailable crates)
# libp2p = { version = "0.54", features = ["tokio", "noise", "tcp", "yamux", "mdns", "gossipsub", "identify"] }
# consul = "0.4"
# etcd-rs = "1.0"
# node-discovery = "0.1"
# swarm = "0.1"
# kademlia = "0.1"
# rendezvous-hash = "0.2"

# Resilience and Circuit Breakers
failsafe = "0.3"
# resilience = "0.1"
backoff = "0.4"
retry = "2.0"

# Observability and Monitoring
# opentelemetry = { version = "0.24", features = ["rt-tokio"] }
# opentelemetry-jaeger = "0.23"
# opentelemetry-otlp = "0.17"
prometheus = "0.13"
# metrics = "0.23"
# metrics-exporter-prometheus = "0.14"
# tracing-opentelemetry = "0.25"

# Message Queues and Event Streaming
# redis = { version = "0.26", features = ["tokio-comp", "json", "connection-manager"] }
# lapin = "2.3"
# nats = "0.25"
tokio-tungstenite = "0.24"

# HTTP and WebSocket
# hyper = { version = "1.4", features = ["full"] }
# tonic = "0.12"

# Configuration and Environment
# serde-env = "0.1"
# confy = "0.6"
# humantime-serde = "1.1"

# Testing and Simulation
# madsim = "0.2"
proptest = "1.5"

# Performance and Utilities
crossbeam = "0.8"
rayon = "1.10"
flume = "0.11"
async-channel = "2.3"
rand = "0.8"

# tower_governor = { version = "0.4.3", optional = true } # Incompatible with Axum 0.8


[features]
default = ["ssr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "dep:reqwasm", "dep:chrono"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:reqwasm"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:leptos_axum",
    "dep:surrealdb",
    "surrealdb/kv-mem",
    "dep:chrono",
    "dep:dotenvy",
    # "dep:tower_governor",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

