[package]
name = "olympus"
version = "13.0.0"
license = "MIT"
edition = "2021"
description = "OLYMPUS v13 - Sistema Autoregenerativo de Actores Distribuidos"
authors = ["Olympus Medical Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "frontend"
path = "src/bin/frontend.rs"
required-features = ["csr"]

[[bin]]
name = "olympus-server"
path = "src/main.rs"
required-features = ["ssr"]

[features]
default = ["ssr", "v13"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "dep:reqwasm", "dep:chrono"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:reqwasm"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:leptos_axum",
    "dep:surrealdb",
    "surrealdb/kv-mem",
    "dep:chrono",
    "dep:dotenvy",
    "dep:valkey",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
v13 = []

[dependencies]
# Core serialization and data
serde = { version = "1.0.228", features = ["derive", "rc", "alloc", "std"] }
serde_json = "1.0.126"
toml = "0.8"
uuid = { version = "1.10", features = ["v4", "serde", "fast-rng"] }
base64 = "0.22"

# Frontend (WebAssembly)
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
gloo-timers = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Storage", "Window", "Document", "Element", "HtmlElement", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement"] }
reqwasm = { version = "0.5.0", optional = true }

# Backend dependencies (optional, enabled by ssr feature)
axum = { version = "0.8.7", features = ["ws"], optional = true }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync", "fs", "io-util", "parking_lot", "tracing"], optional = true }
tower-http = { version = "0.6.7", features = ["full", "cors"], optional = true }
tower = { version = "0.5", features = ["full"], optional = true }
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_debug", "async-await", "log", "log-always"], optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json", "registry", "smallvec", "time", "tracing-log"], optional = true }
leptos_axum = { version = "0.6", optional = true }
surrealdb = { version = "2.4", features = ["protocol-ws", "protocol-http", "kv-mem"], optional = true }
valkey = { version = "0.0.0-alpha5", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
dotenvy = { version = "0.15", optional = true }
config = { version = "0.14", features = ["yaml", "json"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

# Data processing and validation
ammonia = "4.1.2"
csv = "1.4.0"
futures-util = { version = "0.3", features = ["sink"] }
async-trait = "0.1"
regex = "1.10"

# OTP Core: Actor System and GenServer
ractor = { version = "0.9", features = ["async-trait"] }
dashmap = "6.0"
lru = "0.12"
parking_lot = "0.12"
flume = "0.11"
async-channel = "2.3"

# Supervisor and Error Handling
eyre = "0.6"
anyhow = "1.0"
color-eyre = "0.6"
thiserror = "1.0"

# Cryptography and Security
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto", "pem"], default-features = false }
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
argon2 = "0.5"
blake3 = "1.5"
ring = "0.17"
rustls = "0.23"
x509-parser = "0.16"
pem = "3.0"
pkcs8 = "0.10"
ecdsa = "0.16"
ed25519-dalek = "2.0"

# Resilience and Circuit Breakers
failsafe = "0.3"
backoff = "0.4"
retry = "2.0"

# WebSocket
tokio-tungstenite = "0.24"

# Performance and Utilities
crossbeam = "0.8"
rayon = "1.10"
rand = "0.8"

# Observability
prometheus = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

