[package]
name = "olympus-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7.6", features = ["csr"] }
leptos_router = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Storage", "Window", "Document", "Element", "HtmlElement", "Event", "HtmlButtonElement", "HtmlInputElement", "console"] }
console_error_panic_hook = "0.1"
reqwasm = "0.5"
gloo-timers = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "s"
lto = true
