[package]
name = "olympus-core"
version = "13.0.0"
edition = "2021"
description = "OLYMPUS Core - Modelos compartidos"
authors = ["Olympus Medical Team"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
