[package]
name = "olympus-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Base de datos
surrealdb = { version = "2", features = ["protocol-ws", "protocol-http", "kv-mem"] }

# Redis/Valkey
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Async runtime
async-trait = "0.1"
tokio-util = "0.7"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utils
once_cell = "1.19"
dashmap = "6.0"

[[bin]]
name = "olympus"
path = "src/main.rs"
